Bug 128608 - FILEOPEN: DOC: Row in table has incorrect background color
Summary: FILEOPEN: DOC: Row in table has incorrect background color
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:6.5.0 target:6.4.0.1 target:6.3.4
Keywords: bibisected, bisected, regression
: 128573 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-11-05 10:34 UTC by Xisco Faulí
Modified: 2019-11-20 10:27 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
comparison MSO 2010 and LibreOffice 6.4 Master (126.69 KB, image/png)
2019-11-05 10:34 UTC, Xisco Faulí
Details
tdf129608_colAutoParaBackStyle.odt: non-table example where paragraph background turns white. (10.84 KB, application/vnd.oasis.opendocument.text)
2019-11-11 04:48 UTC, Justin L
Details
tdf128608_colAutoParaBackStyle.odt: corrected the name (10.84 KB, application/vnd.oasis.opendocument.text)
2019-11-11 04:50 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-11-05 10:34:03 UTC
Created attachment 155524 [details]
comparison MSO 2010 and LibreOffice 6.4 Master

Steps to reproduce:
1. Open attachment 155489 [details] from bug 128573

-> Last row has some parts with white background and others with yellow background. See comparison image

Reproduced in

Version: 6.4.0.0.alpha1+
Build ID: ee909ca2c02f949605f68720c3f1eef658502749
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2019-11-05 10:35:37 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=3539a1efb41a787237e4333ebc715db96ffacb5b

author	Justin Luth <justin.luth@collabora.com>	2018-11-28 16:17:22 +0300
committer	Justin Luth <justin_luth@sil.org>	2019-01-15 19:50:35 +0100
commit 3539a1efb41a787237e4333ebc715db96ffacb5b (patch)
tree a671c2f9d57a33bd6e55d5835223c30461f557c1
parent e1e772e40f83a8f1d7c4947c5784e1fe8b640d5b (diff)
tdf#116071 ww8import: import to XATTR_FILL instead of RES_BACKGROUND

Bisected with: bibisect-linux64-6.3

Adding Cc: to Justin Luth
Comment 2 Xisco Faulí 2019-11-05 10:37:30 UTC
*** Bug 128573 has been marked as a duplicate of this bug. ***
Comment 3 Justin L 2019-11-09 05:02:13 UTC
Proposing https://gerrit.libreoffice.org/82339
     partial revert tdf#116071 import to XATTR_FILL not RES_BACKGROUND

A partial revert should solve the problem (too late for 6.2.x), but lets leave this bug report open to remove RES_BACKGROUND dependency. In other words, how can we make it work so that XATTR_FILL can be used here instead of RES_BACKGROUND.
Comment 4 Xisco Faulí 2019-11-09 14:45:27 UTC
(In reply to Justin L from comment #3)
> Proposing https://gerrit.libreoffice.org/82339
>      partial revert tdf#116071 import to XATTR_FILL not RES_BACKGROUND
>

Verified in

Version: 6.4.0.0.alpha1+
Build ID: 9336ae40d51e9a95ea31dd5fcfa5b67a9b2bafd7
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Justin Luth, thanks for fixing this issue!

> lets leave this bug report open to remove RES_BACKGROUND dependency. In other
> words, how can we make it work so that XATTR_FILL can be used here instead
> of RES_BACKGROUND.

Should be close this one and open a new one instead ?
Comment 5 Justin L 2019-11-11 04:48:13 UTC
Created attachment 155694 [details]
tdf129608_colAutoParaBackStyle.odt: non-table example where paragraph background turns white.

As it turns out, the revert wasn't necessary. A real fix is proposed at https://gerrit.libreoffice.org/82412 tdf#128608.

I think that I will backport this as well, since I was able to create a clean-room example without using tables - proving that I at least somewhat understand the problem, and that there are situations going back to 6.2.x that still aren't resolved without this.
Comment 6 Justin L 2019-11-11 04:50:38 UTC
Created attachment 155695 [details]
tdf128608_colAutoParaBackStyle.odt: corrected the name
Comment 7 Commit Notification 2019-11-19 16:16:23 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b926a068a067e7aff6c8f11ed1098a76c39bf5e8

tdf#128608 ww8import: COL_AUTO == NO FILL, not solid

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2019-11-19 21:59:03 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/b58225718f1915762d6c74de2ba9865250933c18

tdf#128608 ww8import: COL_AUTO == NO FILL, not solid

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2019-11-20 08:31:24 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/ed58057107df3b6f440d2f05303ea7a9f68b0ac7

tdf#128608 ww8import: COL_AUTO == NO FILL, not solid

It will be available in 6.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Xisco Faulí 2019-11-20 10:27:34 UTC
Verified in

Version: 6.5.0.0.alpha0+
Build ID: 5059984c44379d09eabf740c21db062b925394ad
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Justin Luth, thanks for fixing this issue!!