tdf#128608 ww8import: COL_AUTO == NO FILL, not solid

This fixes problems in the patches for tdf#116071.

Tables have nothing to do with this bug. It just is the most
common place to have a background colour, and then to have
direct formatting that reverts back to COL_AUTO. I created
a unit test using the page background (black), default style
paragraph background (blue), and direct formatting COL_AUTO.
COL_AUTO was turned into WHITE if the fillstyle was set to SOLID.

Change-Id: I8197c040cec5adbdf16f379a88fab5e534ac0c6e
Reviewed-on: https://gerrit.libreoffice.org/82412
Tested-by: Jenkins
Reviewed-by: Justin Luth <justin_luth@sil.org>
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>
(cherry picked from commit b926a068a067e7aff6c8f11ed1098a76c39bf5e8)
Reviewed-on: https://gerrit.libreoffice.org/83221
(cherry picked from commit b58225718f1915762d6c74de2ba9865250933c18)